compiler/testData/diagnostics/tests/annotations/Deprecated.kt
// FIR_IDENTICAL
import java.lang.Deprecated as deprecated

<!DEPRECATED_JAVA_ANNOTATION!>@java.lang.Deprecated<!> fun foo() {}

<!DEPRECATED_JAVA_ANNOTATION!>@deprecated<!> fun foo1() {}